--- a/index.html
+++ b/index.html
@@ -9,51 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    <style>
-      body {
-        background: linear-gradient(135deg, #1e272e, #0f1519);
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0;
-      }
-      .loader {
-        border: 6px solid #222c36;
-        border-top: 6px solid #6c5ce7;
-        border-radius: 50%;
-        width: 60px;
-        height: 60px;
-        animation: spin 1s linear infinite;
-        margin-bottom: 1.5rem;
-      }
-      @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
-      }
-      .loading-text {
-        color: #f5f6fa;
-        font-family: 'Inter', sans-serif;
-        font-size: 1.2rem;
-        text-align: center;
-        letter-spacing: 1px;
-      }
-      #app {
-        display: none;
-      }
-    </style>
   </head>
   <body>
-    <div id="loader-container">
-      <div class="loader"></div>
-      <div class="loading-text">Loading ShadowForge...</div>
-    </div>
     <div id="app"></div>
-    <script type="module">
-      import('/src/main.js').then(() => {
-        document.getElementById('loader-container').style.display = 'none';
-        document.getElementById('app').style.display = '';
-      });
-    </script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html> 
